Fix lightbox overlap with gridster in edit page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -229,7 +229,6 @@ body
   .content_preview 
   {
     margin-top: 175px;
-    height: 450px;
 
     .content_detail 
     {
